--- a/04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m/c_invoice_withholding_sub_vat.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m/c_invoice_withholding_sub_vat.jrxml
@@ -74,38 +74,46 @@ WHERE
 	<title>
 		<band height="11">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
-			<staticText>
-				<reportElement x="0" y="0" width="190" height="11" uuid="0e5835da-3706-4fa7-9a45-8b9bc1ec2a02"/>
+			<frame>
+				<reportElement x="0" y="0" width="190" height="11" uuid="0168b3f7-6b28-4e61-b48b-5732b24075b4">
+					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
+				</reportElement>
 				<box>
 					<pen lineWidth="0.5"/>
-					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="8" isBold="true"/>
-				</textElement>
-				<text><![CDATA[RIEPILOGO IVA]]></text>
-			</staticText>
+				<staticText>
+					<reportElement mode="Opaque" x="0" y="0" width="190" height="11" backcolor="#A8EB6E" uuid="0e5835da-3706-4fa7-9a45-8b9bc1ec2a02"/>
+					<box>
+						<pen lineWidth="0.5"/>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font size="8" isBold="true"/>
+					</textElement>
+					<text><![CDATA[RIEPILOGO IVA]]></text>
+				</staticText>
+			</frame>
 		</band>
 	</title>
 	<columnHeader>
-		<band height="10" splitType="Stretch">
+		<band height="7" splitType="Stretch">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.spreadsheet.SpreadsheetLayout"/>
 			<frame>
-				<reportElement mode="Opaque" x="0" y="0" width="190" height="10" backcolor="#BFBFBF" uuid="d77622fe-bf75-40ee-8867-7849e0af2873">
+				<reportElement mode="Opaque" x="0" y="0" width="190" height="7" backcolor="#A8EB6E" uuid="d77622fe-bf75-40ee-8867-7849e0af2873">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.spreadsheet.SpreadsheetLayout"/>
 				</reportElement>
 				<box>
 					<pen lineWidth="0.5"/>
-					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<staticText>
-					<reportElement x="0" y="0" width="40" height="10" uuid="56b97948-d25c-46a3-844e-2f1e5c2c8c9a">
+					<reportElement x="0" y="0" width="40" height="7" uuid="56b97948-d25c-46a3-844e-2f1e5c2c8c9a">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="345f4eb1-ce2f-480e-8462-fc1566cd5cee"/>
 					</reportElement>
 					<box leftPadding="5"/>
@@ -115,7 +123,7 @@ WHERE
 					<text><![CDATA[IND.]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="40" y="0" width="90" height="10" uuid="3b95c19e-c139-4a9a-bff9-c16d9a8db54b">
+					<reportElement x="40" y="0" width="90" height="7" uuid="3b95c19e-c139-4a9a-bff9-c16d9a8db54b">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4730a37e-9827-46ef-a3a2-4be1a74c1457"/>
 					</reportElement>
 					<box rightPadding="5"/>
@@ -125,7 +133,7 @@ WHERE
 					<text><![CDATA[IMPONIBILE]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="130" y="0" width="60" height="10" uuid="dd78eab7-acd6-41e3-8733-08d51af777a6">
+					<reportElement x="130" y="0" width="60" height="7" uuid="dd78eab7-acd6-41e3-8733-08d51af777a6">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="69798bca-668d-4761-8dbb-614747510b22"/>
 					</reportElement>
 					<box rightPadding="5"/>
@@ -183,12 +191,14 @@ WHERE
 				</textField>
 			</frame>
 		</band>
-		<band height="9">
+		<band height="6">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
 			<frame>
-				<reportElement x="0" y="0" width="190" height="9" isRemoveLineWhenBlank="true" uuid="28483c2c-216c-4ab3-adc0-35ea832be5f5"/>
+				<reportElement x="0" y="0" width="190" height="6" isRemoveLineWhenBlank="true" uuid="28483c2c-216c-4ab3-adc0-35ea832be5f5">
+					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
+				</reportElement>
 				<textField isBlankWhenNull="true">
-					<reportElement x="0" y="0" width="190" height="9" isRemoveLineWhenBlank="true" uuid="73b4392b-320f-42e8-8ba1-5252f41e0063">
+					<reportElement x="0" y="0" width="190" height="6" isRemoveLineWhenBlank="true" uuid="73b4392b-320f-42e8-8ba1-5252f41e0063">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="2a42e339-3cca-4032-94d6-c0d24d9732b4"/>
 					</reportElement>
 					<box leftPadding="5"/>
