--- a/04.CicloAttivo_QuotetoInvoice/SalesOrder/c_orderlist0055/c_orderlist0055.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/SalesOrder/c_orderlist0055/c_orderlist0055.jrxml
@@ -38,7 +38,7 @@ SELECT *
 FROM lit_rep_order_v
 WHERE 
 c_orderline_qtyreserved>0 and 
-c_order_docstatus='CO'
+c_order_docstatus='CO' and c_order_issotrx = 'Y'
 ORDER BY c_bpartner_name,c_order_documentno,c_orderline_line]]>
 	</queryString>
 	<field name="ad_client_ad_client_id" class="java.math.BigDecimal">
@@ -137,6 +137,10 @@ ORDER BY c_bpartner_name,c_order_documentno,c_orderline_line]]>
 		<property name="com.jaspersoft.studio.field.label" value="c_order_revision"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_order_v"/>
 	</field>
+	<field name="c_order_issotrx" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="c_order_issotrx"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_order_v"/>
+	</field>
 	<field name="c_orderline_c_orderline_id" class="java.math.BigDecimal">
 		<property name="com.jaspersoft.studio.field.label" value="c_orderline_c_orderline_id"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_order_v"/>
@@ -227,6 +231,10 @@ ORDER BY c_bpartner_name,c_order_documentno,c_orderline_line]]>
 	</field>
 	<field name="m_product_value" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="m_product_value"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_order_v"/>
+	</field>
+	<field name="m_product_unitsperpallet" class="java.math.BigDecimal">
+		<property name="com.jaspersoft.studio.field.label" value="m_product_unitsperpallet"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_order_v"/>
 	</field>
 	<field name="ad_reference_e_name" class="java.lang.String">
@@ -454,7 +462,7 @@ ORDER BY c_bpartner_name,c_order_documentno,c_orderline_line]]>
 	<group name="Gruppo1" minHeightToStartNewPage="29" keepTogether="true">
 		<groupExpression><![CDATA[$F{c_order_c_order_id}]]></groupExpression>
 		<groupHeader>
-			<band height="112">
+			<band height="104">
 				<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.spreadsheet.SpreadsheetLayout"/>
 				<frame>
 					<reportElement x="0" y="0" width="442" height="39" uuid="b1d87823-e2cb-4715-8f45-2c523a0c100e">
@@ -529,14 +537,14 @@ ORDER BY c_bpartner_name,c_order_documentno,c_orderline_line]]>
 					</frame>
 				</frame>
 				<frame>
-					<reportElement mode="Opaque" x="0" y="39" width="822" height="55" isRemoveLineWhenBlank="true" backcolor="#FF9933" uuid="2f90e8e8-0be4-4f4e-b0de-5e9a20de72ca">
+					<reportElement mode="Transparent" x="0" y="39" width="822" height="47" isRemoveLineWhenBlank="true" backcolor="#FF9933" uuid="2f90e8e8-0be4-4f4e-b0de-5e9a20de72ca">
 						<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 					</reportElement>
 					<box>
-						<pen lineWidth="0.5"/>
+						<pen lineWidth="2.0"/>
 					</box>
 					<textField isBlankWhenNull="true">
-						<reportElement x="0" y="0" width="822" height="28" uuid="4915a94d-e43f-46e4-b912-832ef2ee4d4d"/>
+						<reportElement x="0" y="0" width="822" height="24" uuid="4915a94d-e43f-46e4-b912-832ef2ee4d4d"/>
 						<box leftPadding="3"/>
 						<textElement verticalAlignment="Middle">
 							<font fontName="SansSerif" size="14" isBold="true"/>
@@ -544,21 +552,24 @@ ORDER BY c_bpartner_name,c_order_documentno,c_orderline_line]]>
 						<textFieldExpression><![CDATA[$F{c_bpartner_name}]]></textFieldExpression>
 					</textField>
 					<textField isBlankWhenNull="true">
-						<reportElement x="0" y="28" width="822" height="27" uuid="20f1e2c5-5384-430e-aa87-ee6e341f139b"/>
+						<reportElement x="0" y="24" width="822" height="23" uuid="20f1e2c5-5384-430e-aa87-ee6e341f139b"/>
 						<box leftPadding="3"/>
 						<textElement verticalAlignment="Middle">
 							<font fontName="SansSerif" size="14" isBold="true"/>
 						</textElement>
-						<textFieldExpression><![CDATA[$F{c_location_a_address1}+" "+($F{c_location_a_address2}!=null ?$F{c_location_a_address2}:" ")+" "+ $F{c_location_a_city} +" "+( $F{c_bpartner_location_a_phone}!= null? $F{c_bpartner_location_a_phone}:"")
-]]></textFieldExpression>
+						<textFieldExpression><![CDATA[$F{c_location_a_address1}+" "+($F{c_location_a_address2}!=null ?$F{c_location_a_address2}:" ")+" "+ $F{c_location_a_city} +" "+( $F{c_bpartner_location_a_phone}!= null? $F{c_bpartner_location_a_phone}:"")]]></textFieldExpression>
 					</textField>
 				</frame>
 				<frame>
-					<reportElement mode="Opaque" x="0" y="94" width="822" height="18" isRemoveLineWhenBlank="true" backcolor="#CCFF99" uuid="a839d136-a061-41be-8b50-cf3aa5558be3">
+					<reportElement mode="Opaque" x="0" y="86" width="822" height="18" isRemoveLineWhenBlank="true" backcolor="#D9D9D9" uuid="a839d136-a061-41be-8b50-cf3aa5558be3">
 						<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.spreadsheet.SpreadsheetLayout"/>
 					</reportElement>
 					<box>
 						<pen lineWidth="0.5"/>
+						<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<staticText>
 						<reportElement x="0" y="0" width="629" height="18" uuid="2042aa10-875d-4e93-835e-a96e2a5e9721"/>
