--- a/04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m/c_invoice0042m.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m/c_invoice0042m.jrxml
@@ -645,7 +645,7 @@ WHERE
 					</textElement>
 					<text><![CDATA[CLIENTE]]></text>
 				</staticText>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<textField isBlankWhenNull="true">
 					<reportElement x="0" y="18" width="295" height="12" isRemoveLineWhenBlank="true" uuid="e7493a2a-c189-4aba-990d-1ccfe6985f23"/>
 					<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0"/>
 					<textElement textAlignment="Left" verticalAlignment="Middle">
@@ -663,7 +663,7 @@ WHERE
 					</textElement>
 					<textFieldExpression><![CDATA[$F{c_bpartner_name2}.toUpperCase()]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<textField isBlankWhenNull="true">
 					<reportElement x="0" y="42" width="295" height="12" isRemoveLineWhenBlank="true" uuid="b8525fff-7077-4de3-9b04-1a399f41aefb"/>
 					<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0"/>
 					<textElement textAlignment="Left" verticalAlignment="Middle">
@@ -686,7 +686,7 @@ WHERE
 					</textElement>
 					<textFieldExpression><![CDATA[$F{c_location_address3}.toUpperCase()]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<textField isBlankWhenNull="true">
 					<reportElement x="0" y="78" width="295" height="12" isRemoveLineWhenBlank="true" uuid="c20fe141-70df-4081-9c8b-f3730fec4595"/>
 					<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0"/>
 					<textElement textAlignment="Left" verticalAlignment="Middle">
