--- a/04.CicloAttivo_QuotetoInvoice/SalesOrder/c_orderlist0055/c_orderlist0055.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/SalesOrder/c_orderlist0055/c_orderlist0055.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.8.0.final utlizzo versione della libreria JasperReports6.8.0-2ed8dfabb690ff337a5797129f2cd92902b0c87b  -->
+<!-- Created with Jaspersoft Studio version 6.9.0.final utlizzo versione della libreria JasperReports6.9.0-cb8f9004be492ccc537180b49c026951f4220bf3  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="offerta" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="NoDataSection" columnWidth="822" leftMargin="10" rightMargin="10" topMargin="10" bottomMargin="10" uuid="a6753fbd-fd71-4b38-a8f0-f778b245f3bf">
 	<property name="ireport.zoom" value="2.0"/>
 	<property name="ireport.x" value="0"/>
@@ -612,9 +612,13 @@ ORDER BY c_bpartner_name,c_order_documentno,c_orderline_line]]>
 						<text><![CDATA[PALLET]]></text>
 					</staticText>
 					<staticText>
-						<reportElement x="627" y="-1" width="40" height="18" uuid="a3d6c9ab-a643-4551-a4b6-4989a8a27ac0"/>
+						<reportElement x="627" y="0" width="40" height="18" uuid="a3d6c9ab-a643-4551-a4b6-4989a8a27ac0"/>
 						<box rightPadding="4">
 							<pen lineWidth="0.5"/>
+							<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
+							<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
+							<bottomPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
+							<rightPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 						</box>
 						<textElement textAlignment="Center" verticalAlignment="Middle">
 							<font fontName="SansSerif" size="14" isBold="true"/>
@@ -683,6 +687,12 @@ ORDER BY c_bpartner_name,c_order_documentno,c_orderline_line]]>
 				</textField>
 				<textField>
 					<reportElement x="627" y="0" width="40" height="18" forecolor="#FFFFFF" uuid="de0c8fb4-5d46-476c-a850-70ce24df2941"/>
+					<box>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font size="14" isBold="true"/>
 					</textElement>
