--- a/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout_sub1.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout_sub1.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.9.0.final utlizzo versione della libreria JasperReports6.9.0-cb8f9004be492ccc537180b49c026951f4220bf3  -->
+<!-- Created with Jaspersoft Studio version 6.8.0.final utlizzo versione della libreria JasperReports6.8.0-2ed8dfabb690ff337a5797129f2cd92902b0c87b  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="m_inout_sub1" pageWidth="555" pageHeight="810" whenNoDataType="NoDataSection" columnWidth="555" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" isIgnorePagination="true" uuid="c33fbd9b-fd01-4855-baf8-57a853bc8344">
 	<property name="ireport.zoom" value="1.6934217901613329"/>
 	<property name="ireport.x" value="0"/>
@@ -9,7 +9,7 @@
 	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w2" value="645"/>
 	<property name="com.jaspersoft.studio.property.dataset.dialog.DatasetDialog.sash.w1" value="334"/>
 	<property name="com.jaspersoft.studio.property.dataset.dialog.DatasetDialog.sash.w2" value="657"/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="id prod"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Multiservice"/>
 	<property name="com.jaspersoft.studio.report.description" value=""/>
 	<style name="Table_TH" mode="Opaque" backcolor="#F0F8FF">
 		<box>
@@ -59,79 +59,115 @@ ORDER BY m_inoutline_line ASC]]>
 	</queryString>
 	<field name="m_inoutline_description" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="m_inoutline_description"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
+	</field>
+	<field name="m_inoutline_qtyentered" class="java.math.BigDecimal">
+		<property name="com.jaspersoft.studio.field.label" value="m_inoutline_qtyentered"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="m_inoutline_movementqty" class="java.math.BigDecimal">
 		<property name="com.jaspersoft.studio.field.label" value="m_inoutline_movementqty"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
+	</field>
+	<field name="ddtlineamt" class="java.math.BigDecimal">
+		<property name="com.jaspersoft.studio.field.label" value="ddtlineamt"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="m_inoutline_m_inout_id" class="java.math.BigDecimal">
 		<property name="com.jaspersoft.studio.field.label" value="m_inoutline_m_inout_id"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="c_uom_uomsymbol" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="c_uom_uomsymbol"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="c_bpartner_lit_bpreportparam" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="c_bpartner_lit_bpreportparam"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="m_product_name" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="m_product_name"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="m_product_producttype" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="m_product_producttype"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="m_inoutline_m_inoutline_id" class="java.math.BigDecimal">
 		<property name="com.jaspersoft.studio.field.label" value="m_inoutline_m_inoutline_id"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="m_inoutline_line" class="java.math.BigDecimal">
 		<property name="com.jaspersoft.studio.field.label" value="m_inoutline_line"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="m_product_value" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="m_product_value"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="m_product_description" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="m_product_description"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="m_product_help" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="m_product_help"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="m_inoutline_name" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="m_inoutline_name"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="m_inoutline_help" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="m_inoutline_help"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="ad_orginfo_lit_report_param" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="ad_orginfo_lit_report_param"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="ad_orginfo_lit_report_param1" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="ad_orginfo_lit_report_param1"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="c_orderline_qtyentered" class="java.math.BigDecimal">
 		<property name="com.jaspersoft.studio.field.label" value="c_orderline_qtyentered"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="c_orderine_priceactual" class="java.math.BigDecimal">
 		<property name="com.jaspersoft.studio.field.label" value="c_orderine_priceactual"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="c_orderine_pricelist" class="java.math.BigDecimal">
 		<property name="com.jaspersoft.studio.field.label" value="c_orderine_pricelist"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="c_uom_trl_uomsymbol" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="c_uom_trl_uomsymbol"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="c_uom_trl_name" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="c_uom_trl_name"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="c_order_documentno" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="c_order_documentno"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="c_order_poreference" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="c_order_poreference"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="lit_attribute_v_lot" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="lit_attribute_v_lot"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
 	<field name="ad_language" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="ad_language"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_rep_m_inout_line_v"/>
 	</field>
+	<variable name="ddtlineamt1" class="java.math.BigDecimal" resetType="Page" calculation="Sum">
+		<variableExpression><![CDATA[$F{ddtlineamt}]]></variableExpression>
+	</variable>
 	<group name="Gruppo1" footerPosition="StackAtBottom" preventOrphanFooter="true">
 		<groupExpression><![CDATA[$F{c_order_documentno}]]></groupExpression>
 		<groupHeader>
@@ -250,6 +286,12 @@ ORDER BY m_inoutline_line ASC]]>
 					<text><![CDATA[COLLI]]></text>
 				</staticText>
 			</frame>
+			<staticText>
+				<reportElement x="414" y="0" width="100" height="12" uuid="db3ba190-3ca6-4775-a5f3-b0140ca78424">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="858a9de6-d0c0-4fe8-a675-4e5bc3297fc3"/>
+				</reportElement>
+				<text><![CDATA[ddtlineamt]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
@@ -335,11 +377,11 @@ ORDER BY m_inoutline_line ASC]]>
 					<textElement textAlignment="Right" verticalAlignment="Top">
 						<font fontName="SansSerif" size="8"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{c_orderline_qtyentered}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{m_inoutline_qtyentered}]]></textFieldExpression>
 				</textField>
 			</frame>
 		</band>
-		<band height="40">
+		<band height="49">
 			<property name="com.jaspersoft.studio.layout"/>
 			<frame>
 				<reportElement positionType="Float" stretchType="ContainerHeight" x="80" y="0" width="298" height="40" isRemoveLineWhenBlank="true" uuid="8b9c926e-616d-49d3-860e-a74fe42127a4">
